--- a/css/style_wave.css
+++ b/css/style_wave.css
@@ -1,6 +1,8 @@
 :root {
 	/* Color */
 	--black-color: #140a00;
+	--color-selected: #4dd0e1;
+	--color-white: #ffffff;
 }
 
 body {
@@ -31,12 +33,25 @@ body {
     border: none;
     background: none;
     cursor: pointer;
-    transition: background-color 0.3s;
+    /*transition: background-color 0.3s;*/
+    transition: all 150ms ease-out;
+    opacity: 0.5;
+}
+
+.tab:hover, .sub-tab:hover {
+	transform: scale(1.1);
+    font-size: 1.1rem;
+    font-weight: bold;
 }
 
 .tab.active, .sub-tab.active {
-    background-color: #4dd0e1;
-    color: #ffffff;
+    background-color: var(--color-selected);
+    color: var(--color-white);
+    opacity: 1;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    font-size: 1.1rem;
+    font-weight: bold;
 }
 
 .content {
@@ -62,6 +77,18 @@ body {
     border-radius: 8px;
     margin-bottom: 1px;
     text-align: center;
+    cursor: pointer;
+    transition: all 300ms ease-out;
+    overflow: hidden;
+}
+
+.workcation {
+	margin-top: 10px;
+}
+
+.workcation:hover {
+    font-size: 1.1rem;
+    font-weight: bold;   
 }
 
 .indicator_flex {
@@ -102,6 +129,11 @@ body {
 	width: 100%;
     height: 200px;
     object-fit: fill;
+    transition: all 300ms ease-out;
+}
+
+.workcation:hover img {
+    transform: scale(1.05);   
 }
 
 .index {
