가로 최소 길이 786px로 고정

--- a/css/style_wave.css
+++ b/css/style_wave.css
@@ -157,10 +157,13 @@ body {
 
 .player {
 	display: flex;
-    align-items: center;
+        align-items: center;
 	text-align: center;
 	background-color: var(--black-color);
-	/*width: 100%;*/
+	min-width: 786px;
+	/* 가로 스크롤 */
+	overflow: auto;
+	white-space: nowrap;
 }
 
 .player video {
