--- a/css/style_wave.css
+++ b/css/style_wave.css
@@ -166,15 +166,15 @@ body {
 	white-space: nowrap;
 }
 
-.player video {
-	width: 100%;
-	/*max-width:1000px;*/
+.evt {
+	font-size: 1.1rem;
+	font-weight: bold;
 }
 
 .iframe-container {
 	position: relative;
-    width: 100%;
-    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+	width: 100%;
+	padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
 
 .iframe-container iframe {
